assets/css/app.css
/* ... */
/* ==========================================================================
   Home
   ========================================================================== */

.home-banner {
padding-bottom: 25%;
background-size: contain;
background-repeat: no-repeat;
background-position: center;
}
.navbar-brand{
   display: none!important;
}

/*Owl Control positioning*/
.owl-theme .owl-controls .owl-buttons .owl-prev {position:absolute; left:0px;}
.owl-theme .owl-controls .owl-buttons .owl-next {position:absolute; right:0px;}
.owl-theme .owl-controls {
text-align: center;
position: absolute;
top: 50%;
width: 100%;
height: 0px;
color: #fff!important;
}

.owl-item{
  padding: 5px;
}
h4.featured{
  color: #E99800;
  font-weight: bold;
}

/* Audio Player*/
.audiojs .scrubber {
position: relative;
float: left;
width: 47%;
background: #5a5a5a;
height: 14px;
margin: 10px;
border-top: 1px solid #3f3f3f;
border-left: 0px;
border-bottom: 0px;
overflow: hidden;
}
#audiojs_wrapper0{
  width: 100%;
}
.scrubber{
  background-color: rgba(0,0,0,0)!important;
  border: 1px solid #D8D8D8!important;
}
.audiojs{
  background-color: rgba(0,0,0,0)!important;
  background-image: none!important
}
.audiojs .loaded{
  background-color: rgba(0,0,0,0)!important;
  background-image: none!important
}
.audiojs .progress{
  color: #eeeeee;
}
.audiojs .play-pause{
  border-right: 0px solid #000!important;
  width: 40px;
}
.audiojs .time{
  border-left: 0px solid #000!important;
  color: #000!important;
}

.play-pause>p{
  display: inline-block;
font-family: FontAwesome;
font-style: normal;
font-weight: normal;
line-height: 1;
-webkit-font-smoothing: antialiased;
-moz-osx-font-smoothing: grayscale;
font-size: 1.3em;
}
p.play:before{
  content: "\f04b";
  top: 5px;
  left: 5px;
  position: relative;
}
p.pause:before{
  content: "\f04c";
  top: 5px;
  left: 5px;
  position: relative;
}
 p.loading{
  background: no-repeat center url("../img/spinnerLarge.gif")!important;
  background-size: contain!important;
  position: relative;
  top:-5px;
}
.bio-home{
margin-top: 25px;
}
.line{
background: url(../img/JA_V04-BarLong.png) no-repeat;
width: 100%;
padding-bottom: 5%;
background-size: contain;
margin: 0 1%;}
/* ==========================================================================
   Header
   ========================================================================== */

.banner { }

/* ==========================================================================
   About
   ========================================================================== */

.about-page .blog-img-container {
margin-bottom: 30px;
}
.about p {
word-spacing: 2px;
line-height: 1.5;
}
.about-img {
margin-bottom: 15px;
}
/* ==========================================================================
   Content
   ========================================================================== */

.content { }

/* ==========================================================================
   Albums - Single
   ========================================================================== */

body.single-album .entry-meta,
body.single-album .entry-title {display:none;}

body.single-album .album-header {margin-bottom: 30px;}

body.single-album .album-desc {font-size:16px;}

body.single-album .featured-thumb {border: 1px solid #ccc;}
body.single-album .featured-thumb img {border: 5px solid #fff;}

body.single-album .btn {background: #A57513; color: #fff;}
body.single-album .btn-sm {background: #0B5D6B;}

body.single-album .buy-panel {text-align:center;}

.track-title {
margin-top: 15px;
font-size: 1.4em;
text-align: center;
}


/* ==========================================================================
   Store
   ========================================================================== */
.store-table-header{
   background-color: #0B5D6B;
   margin: 0 0%;
    margin-bottom: 15px; 
    text-align: center;
}
.store-table-header h3{
   color: #fff;
}
.store-row{
   margin: 15px 1%;
}
.store-buy{
   text-align: center;
   margin-top: 5px;
}
.title{
   font-size: 10px;
}
.row-store {
margin-top: 35px;
border-bottom: 2px #045F6B solid;
}
.store-slider{
  margin-bottom: 50px;
}
.sm2_link>.fa :before, .sm2_paused>.fa:before {
content: "\f04b";
}
.sm2_playing>.fa:before{
  content: "\f04c";
}
.play-button {
border-radius: 50%;
height: 30px;
width: 30px;
border: 1px solid #ccc;
float: left;
}

.play-button i {padding: 7px 9px;}
.store-section {
min-height: 250px;
background-color: #FFF;
padding-top: 1%;
border: 1px solid rgb(238, 238, 238);
padding: 2%;
}
.store-desc{
  height: 100px;
}
.buy-options {
list-style: none;
padding-left: 0px;
}
.store-title-2 h5 {
text-align: left;
}
  /*SoundManager Css*/
  a.sm2_button {
   position:relative;
   display:inline-block; /* If you worry about old browser bugs, Firefox 2 might not like this and may need -moz-inline-box instead. :D */
   width:18px;
   height:18px;
   text-indent:-9999px; /* don't show link text */
   overflow:hidden; /* don't draw inner link text */
   vertical-align:middle;
   /* and, a bit of round-ness for the cool browsers. */
   border-radius:6px;
   margin-top:-1px; /* vertical align tweak */
   /* safari 3.1+ fun (/W3 working draft extension, TBD.) */
   -webkit-transition-property: hover;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out 0s; /* firefox 4 (couldn't sort out -moz-transform vs. MozTransform, so, "all" for now) */
   -o-transition-property: background-color; /* opera 10.5 */
   -o-transition-duration: 0.15s;
   /* weird IE 6/7 display fixes, and/or I'm doing it wrong */
   *text-indent:0px;
   *line-height:99em;
   *vertical-align: top;
  }

  a.sm2_button:focus {
   outline:none; /* maybe evil, but don't show the slight border outline on focus. */
  }
/* ... */

